--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
         <div class="container-header">
-            <a class="logo" href="#"><img src="assets/img/W..svg"></a>
+            <a class="logo" href="#"><img src="./assets/img/W..svg"></a>
             <div class="navbar">
                 <ul>
                     <li>Home</li>
@@ -28,7 +28,7 @@
     <main>
         <div class="container-main">
             <div class="block-1">
-                <div class="image-1"><img src="assets/img/image-1.png"></div>
+                <div class="image-1"><img src="./assets/img/image-1.png"></div>
                 <div><h1>The Bright Future of Web 3.0?</h1></div>
                 <div class="text-butt">
                     <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
@@ -63,7 +63,7 @@
 
             <a class="article" href="#">
                 <div class="D01">
-                        <div class="image-2"><img src="assets/img/image-2.png"></div>
+                        <div class="image-2"><img src="./assets/img/image-2.png"></div>
                     <div class="text-4">
                         <h1>01</h1>
                         <h6>Reviving Retro PCs</h6>
@@ -74,7 +74,7 @@
 
             <a class="article" href="#">
                 <div class="D02">
-                        <div class="image-3"><img src="assets/img/image-3.png"></div>
+                        <div class="image-3"><img src="./assets/img/image-3.png"></div>
                     <div class="text-5">
                         <h1>02</h1>
                         <h6>Top 10 Laptops of 2022</h6>
@@ -85,7 +85,7 @@
 
             <a class="article" href="#">
                 <div class="D03">
-                        <div class="image-4"><img src="assets/img/image-4.png"></div>
+                        <div class="image-4"><img src="./assets/img/image-4.png"></div>
                     <div class="text-6">
                         <h1>03</h1>
                         <h6>The Growth of Gaming</h6>
